<resources>
    <string name="app_name">Authenticator</string>
    <string name="secure_auth">SecureAuth</string>
    <string name="welcome_secure_access">Welcome to secure access</string>
    <string name="scan_get_start">Scan to get started</string>
    <string name="account_name">Account name</string>
    <string name="account_key">Your key</string>
    <string name="account_safeguard">Your account, safeguarded</string>
    <string name="let_start">Let\'s Begin</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="add_code">Add a code</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="without_account">Continue without account</string>
    <string name="select_language">Select Language</string>
    <string name="sign_in">Sign in</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="deleted">Recently deleted</string>
    <string name="import_export">Import &amp; export</string>
    <string name="feedback">Feedback</string>
    <string name="rate_experience">Rate Your Experience</string>
    <string name="tell_us_how_to_improve">Tell us what can be Improved?</string>
    <string name="satisfied_service">Are you satisfied with the service?</string>
    <string name="how_to_word">How it works</string>
    <string name="use_qr_code">Use a QR code</string>
    <string name="provide_account_details">Provide your account details</string>
    <string name="enter_manually">Enter a key manually</string>
    <string name="set_authentication">Set Up Your Authenticator</string>
    <string name="one_time_password">One-time password enabled</string>
    <string name="field_should_not_empty">Field should not be empty</string>
    <string name="account_should_not_empty">Account name should not be empty</string>
    <string name="error_occurs">Some error occurs</string>
    <string name="key_should_not_empty">Key should not be empty</string>
    <string name="authenticate_login">Authenticate your logins with one-time codes\ngenerated by the app.</string>
    <string name="scanning_text">Scan the 2FA QR code of the\n account you want to add.</string>
    <string name="authentication_details">Choose your setup method: Scan a QR code or enter a setup key from your 2FA settings</string>
    <string name="welcome_to_authenticator">Welcome to Auth</string>
    <string name="safe_and_easy">Your gateway to safe and easy access.</string>
    <string name="tier_app_text">Protect your data with our top-tier security. Your information stays safe and private.</string>
    <string name="easy_authenticator">Easily set up your authenticator by\n scanning a QR code.</string>
    <string name="easy_info">Rest easy—your information is secured\nwith the best protection</string>
    <string name="logs_policy">We enforce a no-logs policy, collecting only anonymous country and language data. All settings are saved on your device. See our Privacy Policy and Terms of Service.</string>
    <string name="delete">Delete</string>
    <string name="overall_service">Overall Service</string>
    <string name="in_app_purchases">In-app Purchases</string>
    <string name="additional_security">Additional Security</string>
    <string name="performance">Performance</string>
    <string name="user_support">User Support</string>
    <string name="data_privacy">Data Privacy</string>
    <string name="import_amp_export"><![CDATA[Import & export]]></string>
    <string name="import_file">Import file</string>
    <string name="import_a_compatible_vault_file">Import a compatible vault file here to access \nyour stored data</string>
    <string name="export_file">Export file</string>
    <string name="import_a_compatible_vault">Import a compatible vault file here to access \nyour stored data</string>
    <string name="password">Enter your password</string>
    <string name="enter_export_password">Enter export password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="import_screen">Import</string>
    <string name="tell_us_how_can_we_improve">Tell us how can we improve…</string>
    <string name="imported_key_name">Imported Key Name</string>
    <string name="similarity_information">Similarity information</string>
    <string name="error_text">Error Text</string>
    <string name="add_selected">ADD SELECTED</string>
    <string name="not_logged_in">Not Logged-In</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="simple_security_easy_access">Simple Security, Easy Access.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_condition"><![CDATA[Terms & condition]]></string>
    <string name="import_in_progress">Import in progress</string>
    <string name="export">Export codes</string>
    <string name="signed_in_successfully">Signed-in successfully</string>
    <string name="copy">Copy</string>
    <string name="condition">Condition</string>
    <string name="account_already_exsist">Account already exsist</string>
    <string name="do_you_want_replace">An account with this name is already exists.</string>
    <string name="replace">Replace</string>
    <string name="keep">Keep both</string>
    <string name="enter_password">Enter Password</string>
    <string name="home">Home</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="stronger_security_with_authenticator" translatable="false">Stronger Security with Authenticator</string>
    <string name="next" translatable="false">Next</string>
    <string name="quick_setup_with_qr_code_scan">Quick Setup with QR Code Scan</string>
    <string name="just_scan_the_qr_code_with_your_camera_and_your_account_is_instantly_added_simple_and_secure">Just scan the QR code with your camera, and your account is instantly added. Simple and secure!</string>
    <string name="one_time_code_for_secure_sign_in">One-time code for secure sign-in</string>
    <string name="get_a_new_code_every_time_you_log_in_for_extra_security_just_enter_the_code_from_the_app_to_sign_in_safely">Get a new code every time you log in for extra security. Just enter the code from the app to sign in safely.</string>
    <string name="sync_across_devices">Sync Across Devices</string>
    <string name="easily_back_up_and_sync_your_accounts_in_the_cloud_switch_devices_just_sign_in_to_get_all_your_codes_back">Easily back up and sync your accounts in the cloud. Switch devices? Just sign in to get all your codes back!</string>
    <string name="boost_your_account_protection_with_secureauth_enjoy_easy_two_factor_authentication_for_added_safety">Boost your account protection with SecureAuth. Enjoy easy two-factor authentication for added safety.</string>
    <string name="stronger_security_with_secureauth">Stronger Security with SecureAuth</string>
    <string name="exit">Exit</string>
    <string name="skip">Skip</string>
    <string name="privacy_protected_even_offline">Privacy protected, even offline</string>
    <string name="we_don_t_store_your">We don’t store your personal Info. Your privacy is always protected with offline support</string>
    <string name="add_accounts_easily">Add accounts easily with QR</string>
    <string name="adding_an_account_is_super">Adding an account is super simple! Just scan the QR code, and you’re done</string>
    <string name="backup_and_sync">Backup and sync on all devices</string>
    <string name="your_accounts_are_backed_up">Your accounts are backed up and synced across all your devices, so you’re always covered.</string>
    <string name="get_started">Get Started</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="add_account">Add Account</string>
    <string name="backup_data">Backup data</string>
    <string name="how_it_works">How it Works</string>
    <string name="data_is_not_backed_up_yet">Data is not backed up yet</string>
    <string name="enter_a_manual_key">Enter a Manual Key</string>
    <string name="scan_code">Scan Code</string>
    <string name="authenticator_code">Authenticator code</string>
    <string name="scan_qr_code_or_manually_enter_the_setup_key">Scan QR code or manually enter the setup key</string>
    <string name="your_data_is_backed_up_successfully">Your data is backed up successfully</string>
    <string name="respective_platform">Generate QR or key in respective platform</string>
    <string name="authentication_security_section">In authentication security section, generate QR code or create a security key</string>
    <string name="enter_key_manually">Scan QR code or enter key manually</string>
    <string name="create_backup">Create backup to secure codes for future</string>
    <string name="sign_in_to_create_backup">Sign in to create backup codes that you can use on multiple devices</string>
    <string name="one_time_code_for_extra_security">One time code for extra security</string>
    <string name="protect_your_account_with">Protect your account with easy two-factor authentication for extra safety</string>
    <string name="transfer_codes">Transfer codes</string>
    <string name="backup_your_codes">Backup your codes</string>
    <string name="import_a_compatible">Import a compatible vault file here to bring new codes</string>
    <string name="export_a_compatible_vault">Export a compatible vault file here to export your codes</string>
    <string name="not_now">Not now</string>
    <string name="sign_in_to_back_codes">Sign in to back up your codes and secure your data for future use.</string>
    <string name="looks_like_you_haven">Looks like you haven\'t added any codes yet.</string>
    <string name="use_system_default">Use system default</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="select_your_desired_theme">Select your desired theme</string>
    <string name="themes">Themes</string>
    <string name="system">System</string>
    <string name="use_fingerprint">Use fingerprint</string>
    <string name="set_password">Set Password</string>
    <string name="backup_settings">Backup settings</string>
    <string name="logout">Logout</string>
    <string name="warning">Warning: If you forgot your password, you will permanently lose access to your codes. There is no way to recover them without the password.</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="your_current_password">Your current password is not correct! Try again.</string>
    <string name="new_password">New password</string>
    <string name="n_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save_password">Save Password</string>
    <string name="change_password">Change password</string>
    <string name="advanced">Advanced</string>
    <string name="account_details">Account details</string>
    <string name="your_entered_wrong">You entered wrong password! Try again.</string>
    <string name="enter_your_password_to_continue">Enter your password to continue</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="or_open_app_with_your_fingerprint">Or open app with your fingerprint</string>
    <string name="n_continue">Continue</string>
    <string name="add_new">Add new</string>
    <string name="save">Save</string>
    <string name="create_new_group">Create new group</string>
    <string name="enter_group_name_and_tap_on_save">Enter group name and tap on save</string>
    <string name="group_name">Group name</string>
    <string name="ads_free">Ads free</string>
    <string name="activate_2fa_mfa"><![CDATA[Activate 2FA & MFA]]></string>
    <string name="protect_all_passwords">Protect all passwords</string>
    <string name="auto_sync_backup"><![CDATA[Auto sync & backup]]></string>
</resources>