<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_12sdp"
    android:paddingVertical="@dimen/_14sdp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_tick_yellow"
        android:drawablePadding="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/activate_2fa_mfa"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_tick_yellow"
        android:drawablePadding="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/protect_all_passwords"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_tick_yellow"
        android:drawablePadding="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/auto_sync_backup"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_tick_yellow"
        android:drawablePadding="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/ads_free"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />
</LinearLayout>