<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    tools:context=".ui.activities.PasswordScreen">


    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_90sdp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/welcome_back"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/enter_your_password_to_continue"
        android:textColor="@color/n_dark_grey"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeScreen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_new_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/n_password"
                android:inputType="textPassword"
                android:textColor="@color/n_dark_grey"
                android:textColorHint="@color/light_gray"
                app:layout_constraintEnd_toStartOf="@+id/hide_new_password"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/hide_new_password"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:src="@drawable/hide_number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/password_wrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/your_entered_wrong"
        android:textColor="@color/n_warning_red"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password" />

    <ImageView
        android:id="@+id/ivThumb"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/thumb_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_wrong" />


    <TextView
        android:id="@+id/tv_open_thumb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/or_open_app_with_your_fingerprint"
        android:textColor="@color/n_dark_grey"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivThumb" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:backgroundTint="@color/n_sky_blue"
        android:text="@string/n_continue"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>