<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.UsageFragment4">

    <ImageView
        android:id="@+id/ivIntroImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_isolation_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvQuickStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/stronger_security_with_secureauth"
        android:textColor="@color/primary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@+id/ivIntroImg" />


    <TextView
        android:id="@+id/tvQuickDescrpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/boost_your_account_protection_with_secureauth_enjoy_easy_two_factor_authentication_for_added_safety"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/tvQuickStart" />

</androidx.constraintlayout.widget.ConstraintLayout>