<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/of_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.WelcomeScreen">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivLockMode"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginTop="@dimen/_90sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/welcome" />


    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/welcome_to_authenticator"
        android:textColor="@color/primary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/ivLockMode"
        app:layout_constraintStart_toStartOf="@+id/ivLockMode"
        app:layout_constraintTop_toBottomOf="@+id/ivLockMode" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/safe_and_easy"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/ivLockMode"
        app:layout_constraintStart_toStartOf="@+id/ivLockMode"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartAccount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:backgroundTint="@color/secondary_color"
        android:textColor="@color/white"
        android:text="@string/signin_google"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvContinueWithoutAccount" />


    <TextView
        android:id="@+id/tvContinueWithoutAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_40sdp"
        android:text="@string/without_account"
        android:textColor="@color/secondary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>